<resources>
    <string name="app_name">CSGO Build Guide</string>
    <string name="app_title">CSGO Build Guide</string>
    <string name="app_info">App that will teach you about buying in CS:GO</string>
    <string name="email">Enter your Email</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="enter_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="alreadyView">Already have account? Click here to sign in</string>
    <string name="needAccountView">Need account? Click here to sign up</string>
    <string name="choose">Choose your team</string>
    <string name="ct">Counter-Terrorist</string>
    <string name="t">Terrorist</string>
    <string name="add">+Add</string>
    <string name="remove">-Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>